--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>To Do List</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="wrapper">
+	
 	<div id="headline">
 		<h1>To Do List!</h1>
 		<div id="getQuote">
-			<p>To be or not to be... - Shakespear</p>
+			<p>"To be or not to be..."  - Shakespear</p>
 		</div>
 		<div id="currentDate">
 		</div>
 	</div>
-	<form class="addItem">	
-		<input type="text" name="newItem" required>
-     	<input class="btn btn-primary" type="submit" value="+ Add Item">
-	</form>
-
+		<form class="addItem input-group">
+	      <input type="text" class="form-control" placeholder="What's your tasks today?" required name="newItem">
+	      <span class="input-group-btn">
+	        <input class="btn btn-primary" type="submit" value="+ Add Item">
+	      </span>
+	    </form>
 	<div>
 		<h1>Tasks</h1>
 		<ul class="list-group tasks"></ul>
@@ -28,6 +32,10 @@
 		<h1>Completed</h1>
 		<ul class="list-group completedTask"></ul>
 	</div>
+</div>
+<footer>
+		<p>Made with <span class="love">♥</span> by <a href="http://www.owaaquino.com" target="_blank" >owaaquino</a>. </p>
+</footer>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
