--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="headline">
 		<h1>To Do List!</h1>
 		<div id="getQuote">
-			<p>"To be or not to be..."  - Shakespear</p>
+			<p>one hundred thirty-four thousand, nine hundred seven pesos and fifty cents</p>
 		</div>
 		<div id="currentDate">
 		</div>
