finally fixed the issue...updating index.html and app.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>To Do List</title>
+	<title>A To Do List</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -10,9 +10,8 @@
 <div class="wrapper">
 	
 	<div id="headline">
-		<h1>To Do List!</h1>
+		<h1>A To-Do-List!</h1>
 		<div id="getQuote">
-			<p>one hundred thirty-four thousand, nine hundred seven pesos and fifty cents</p>
 		</div>
 		<div id="currentDate">
 		</div>
