--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
 		<div id="currentDate">
 		</div>
 	</div>
-		<form class="addItem input-group">
-	      <input type="text" class="form-control" placeholder="What's your tasks today?" required name="newItem">
-	      <span class="input-group-btn">
-	        <input class="btn btn-primary" type="submit" value="+ Add Item">
-	      </span>
-	    </form>
-	<div>
+
+	<form class="addItem input-group">
+      <input type="text" class="form-control" placeholder="What's your tasks today?" required name="newItem">
+      <span class="input-group-btn">
+        <input class="btn btn-primary" type="submit" value="+ Add Item">
+      </span>
+    </form>
+
+	<div class="ass">
 		<h1>Tasks</h1>
 		<ul class="list-group tasks"></ul>
 	</div>
-	<div>
+
+	<div class="ass">
 		<h1>Completed</h1>
 		<ul class="list-group completedTask"></ul>
 	</div>
@@ -38,6 +41,8 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="js/helpers.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/runner.js"></script>
 	</body>
 </html>
